manifests/gotosocial/gotosocial.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotosocial
  namespace: gotosocial
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: web
    name: web
  selector:
    app: gotosocial
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotosocial
  namespace: gotosocial
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotosocial
  template:
    metadata:
      labels:
        app: gotosocial
    spec:
      containers:
      - name: web
        image: superseriousbusiness/gotosocial:0.6.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotosocial
  namespace: gotosocial
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - gotosocial.cluster.fun
    secretName: gotosocial-ingress
  rules:
  - host: gotosocial.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: gotosocial
            port:
              number: 80
